Added SQL markdown text into notebook

--- a/bikeshare_ts_proj.ipynb
+++ b/bikeshare_ts_proj.ipynb
@@ -26,6 +26,51 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "``` postgresql\n",
+    "BEGIN;\n",
+    "\n",
+    "create temporary table t \n",
+    "(\n",
+    "  Duration NUMERIC,\n",
+    "  Start_time TIMESTAMP,\n",
+    "  End_time TIMESTAMP,\n",
+    "  Start_Station NUMERIC,\n",
+    "  Start_Station_Name VARCHAR,\n",
+    "  End_Station NUMERIC,\n",
+    "  End_Station_Name VARCHAR,\n",
+    "  Bike VARCHAR,\n",
+    "  Member VARCHAR \n",
+    ");\n",
+    "\n",
+    "COPY t \n",
+    "FROM '/tmp/2013Q4-capitalbikeshare-tripdata.csv' DELIMITER ',' CSV HEADER;\n",
+    "\n",
+    "INSERT INTO rides(Duration, Start, Bike, Member)\n",
+    "SELECT Duration, Start_time, Bike, Member\n",
+    "FROM t;\n",
+    "\n",
+    "drop table t;\n",
+    "\n",
+    "SELECT DATE_TRUNC('month', start) AS Month, COUNT(bike) AS Num_Rides  \n",
+    "FROM rides\n",
+    "GROUP BY Month;\n",
+    "\n",
+    "COMMIT;\n",
+    "\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -36,13 +81,6 @@
     "import matplotlib.pyplot as plt\n",
     "from statsmodels.tsa.api import ExponentialSmoothing"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -111,6 +149,7 @@
     "bike_plot = bike.plot(figsize = (10,6), title = \"Holt-Winters' Method Bike Share Fit\")\n",
     "bike_plot.set_ylabel(\"Number of Bike rentals\")\n",
     "bike_plot.set_xlabel(\"Year\")\n",
+    "\n",
     "fit_hw.fittedvalues.plot(ax = bike_plot, style = '--', color = 'DarkRed')\n",
     "bike_plot.legend(['Bike Rentals', 'H-W Model Fit'])"
    ]
