Wrote part of python notebook on aggregation and preprocessing of the data

--- a/bikeshare_ts_proj.ipynb
+++ b/bikeshare_ts_proj.ipynb
@@ -19,11 +19,12 @@
  },
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Bicycle Rental Time Series Analysis\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -56,10 +57,6 @@
     "\n",
     "drop table t;\n",
     "\n",
-    "SELECT DATE_TRUNC('month', start) AS Month, COUNT(bike) AS Num_Rides  \n",
-    "FROM rides\n",
-    "GROUP BY Month;\n",
-    "\n",
     "COMMIT;\n",
     "\n",
     "```\n"
@@ -68,7 +65,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "With the daily bike rental data inserted into my local PostgreSQL database, aggregating the data to yield monthly ridership was straight forward with the following query:\n",
+    "\n",
+    "``` PostgreSQL\n",
+    "SELECT DATE_TRUNC('month', start) AS Month, COUNT(bike) AS Num_Rides  \n",
+    "FROM rides\n",
+    "GROUP BY Month;\n",
+    "```\n",
+    "\n",
+    "With these monthly numbers, we can now move over to Python to do some time series analysis. I opted to save the table into a CSV file to keep things simple and not have to bring in additional libraries for connecting to the PostgreSQL database from Python.\n",
+    "\n",
+    "For this project, I used pandas for additional data manipulation and statsmodels for time series modeling functionality. "
+   ]
   },
   {
    "cell_type": "code",
