--- a/bikeshare_ts_proj.ipynb
+++ b/bikeshare_ts_proj.ipynb
@@ -28,6 +28,14 @@
    "metadata": {},
    "source": [
     "# Bicycle Rental Time Series Analysis\n",
+    "\n",
+    "Bike sharing is a form of transportation in urban areas where passengers can get rent bikes from a number of public stations litered throughout a city for minutes or hours at a time and return them at any public station. Whether for leisurely riding or commuting throughout the city, bike sharing has been increasing in popularity worldwide over the past few decades- one of the main draws being how densely populated metro areas can frequently be navigated quicker by bike than by car.\n",
+    "\n",
+    "The data is available directly from their website here:\n",
+    "https://www.capitalbikeshare.com/system-data\n",
+    "\n",
+    "\n",
+    "## Data Aggregation and Transformation in PostgreSQL\n",
     "\n"
    ]
   },
@@ -35,8 +43,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
     "``` postgresql\n",
     "BEGIN;\n",
     "\n",
@@ -64,21 +70,11 @@
     "\n",
     "COMMIT;\n",
     "\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With the daily bike rental data inserted into my local PostgreSQL database, aggregating the data to yield monthly ridership was straight forward with the following query:\n",
+    "```\n",
+    "\n",
+    "<br>\n",
+    "After inserting all of the daily bike rental data into a local PostgreSQL database, aggregating the data to get the monthly ridership was a straight forward query:\n",
+    "\n",
     "\n",
     "``` PostgreSQL\n",
     "SELECT DATE_TRUNC('month', start) AS Month, COUNT(bike) AS Num_Rides  \n",
@@ -86,14 +82,15 @@
     "GROUP BY Month;\n",
     "```\n",
     "\n",
-    "With these monthly numbers, we can now move over to Python to do some time series analysis. I opted to save the table into a CSV file to keep things simple and not have to bring in additional libraries for connecting to the PostgreSQL database from Python.\n",
+    "<br>\n",
+    "With the monthly ridership numbers, the total size of the dataset is something easily manageable within Python, so we can now move over to Python to do more indepth exploration and analysis of the data. For reference, the raw data from Capital Bikeshare was a couple gigabytes, but this monthly aggregated dataset was no more than 2.3kb. I opted to save the aggregated data into a CSV file and load the CSV file in Python just to keep things simple and not have to bring in additional libraries for connecting Python to the PostgreSQL database.\n",
     "\n",
     "For this project, I used _pandas_ for additional data manipulation and _statsmodels_ for time series modeling functionality. _pandas_ has become somewhat of a standard tool for data science and analysis tasks done with Python, and it has a useful _datetime_ data type for representing time series data that integrates well with statistical modeling libraries such as _statsmodels_. _matplotlib_ is needed for additional visualization and plotting purposes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,15 +101,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The models imported from the _statsmodels_ library (_ExponentialSmoothing_ and _ARIMA_) were chosen specifically for their ability to handle the types of pattern and behavior found in the bike rental data- this will be further discussed in the following sections.\n",
+    "\n",
+    "First, we'll need to read our data into a _pandas_ dataframe and make sure that the dataframe's index contains  the appropriate datetime values for each observation. Our aggregated data contains an observation for every month from 2013 to 2019, so we have 84 total values/rows in our data set. I always find it very useful to run the _head()_ method on my dataframes before diving into any exploratory data analysis or modeling just so I get a quick idea of the general structure of the data I am working with."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +121,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>num_rides</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2013-01</th>\n      <td>124989</td>\n    </tr>\n    <tr>\n      <th>2013-02</th>\n      <td>110102</td>\n    </tr>\n    <tr>\n      <th>2013-03</th>\n      <td>157366</td>\n    </tr>\n    <tr>\n      <th>2013-04</th>\n      <td>236442</td>\n    </tr>\n    <tr>\n      <th>2013-05</th>\n      <td>250463</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 27
     }
    ],
    "source": [
@@ -133,11 +132,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Exploratory Data Analysis"
+   ]
   },
   {
    "cell_type": "code",
@@ -166,6 +165,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Fitting"
+   ]
   },
   {
    "cell_type": "code",
@@ -227,13 +233,6 @@
     "states_decomp[['slope']].plot(ax = ax2)\n",
     "states_decomp[['seasonal']].plot(ax = ax3);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
