Filled out a paragraph detailing Capital Bikeshare

--- a/bikeshare_ts_proj.ipynb
+++ b/bikeshare_ts_proj.ipynb
@@ -29,10 +29,10 @@
    "source": [
     "# Bicycle Rental Time Series Analysis\n",
     "\n",
-    "Bike sharing is a form of transportation in urban areas where passengers can get rent bikes from a number of public stations litered throughout a city for minutes or hours at a time and return them at any public station. Whether for leisurely riding or commuting throughout the city, bike sharing has been increasing in popularity worldwide over the past few decades- one of the main draws being how densely populated metro areas can frequently be navigated quicker by bike than by car.\n",
+    "Bike sharing is a form of transportation in urban areas where passengers can get rent bikes from a number of public stations litered throughout a city for minutes or hours at a time and return them at any public station. Whether for leisurely riding or commuting throughout the city, bike sharing has been increasing in popularity worldwide over the past few decades- one of the main draws being how densely populated metro areas can frequently be navigated quicker by bike than by car. As a mix of engineering, logistics, and tech that has the potential to be a heavily utilized form of transportation in the future (due to the need for greener and more efficient modes of transportation for an increasing population), I think bike sharing is a particularly interesting subject of study.\n",
     "\n",
-    "The data is available directly from their website here:\n",
-    "https://www.capitalbikeshare.com/system-data\n",
+    "Capital Bikeshare is one such bike sharing company in Washington DC that has stations available throughout the DMV area. They've made available their ridership data that goes all the way back to 2010, so there is a nice amount of data for messing around with (their data is available directly from their website here:\n",
+    "https://www.capitalbikeshare.com/system-data). I was personally interested in looking at how bike rental numbers have changed throughout the years and using time series modeling and analysis techniques to forecast how the ridership will continue to change in the future. \n",
     "\n",
     "\n",
     "## Data Aggregation and Transformation in PostgreSQL\n",
