Wrote out paragraphs detailing the use of SQL to aggregate the data

--- a/bikeshare_ts_proj.ipynb
+++ b/bikeshare_ts_proj.ipynb
@@ -43,6 +43,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Since the available data is quite rich (every single bike ride throughout the years is logged and included in the datasets), the total data set spanning back to 2011 takes up over 3gb. This brings up two caveats that needed to be addressed before proceeding in the analysis. First, I wanted to aggregate the daily data into overall monthly bike rental numbers \n",
+    "\n",
+    "Second, although this is still within the amount of RAM for almost all modern computers, this was a good opportunity to leverage SQL to do the data aggregation. SQL has good functionality for aggregating and transforming your data in order to get it into a form suitable for the analyses that you actually want to run- so in my case, I used a local PostgreSQL database to aggregate all of the individual bike rentals into overall monthly values. I used an SQL script to load the data in my database and aggregate them in batches (usually by a couple months at a time). For studies or applications with larger datasets that exceed the amount of RAM, processing the data in batches is one of the necessary work-arounds that must be considered. An example of one of the transactions is similar to the following snippet of SQL code:\n",
+    "\n",
+    "\n",
     "``` postgresql\n",
     "BEGIN;\n",
     "\n",
