Filled out a paragraph detailing process for moving data into postgresql database

--- a/bikeshare_ts_proj.ipynb
+++ b/bikeshare_ts_proj.ipynb
@@ -33,9 +33,6 @@
     "\n",
     "Capital Bikeshare is one such bike sharing company in Washington DC that has stations available throughout the DMV area. They've made available their ridership data that goes all the way back to 2010, so there is a nice amount of data for messing around with (their data is available directly from their website here:\n",
     "https://www.capitalbikeshare.com/system-data). I was personally interested in looking at how bike rental numbers have changed throughout the years and using time series modeling and analysis techniques to forecast how the ridership will continue to change in the future. \n",
-    "\n",
-    "\n",
-    "## Data Aggregation and Transformation in PostgreSQL\n",
     "\n"
    ]
   },
@@ -43,6 +40,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Data Aggregation and Transformation in PostgreSQL\n",
+    "\n",
     "Since the available data is quite rich (every single bike ride throughout the years is logged and included in the datasets), the total data set spanning back to 2011 takes up over 3gb. This brings up two caveats that needed to be addressed before proceeding in the analysis. First, I wanted to aggregate the daily data into overall monthly bike rental numbers \n",
     "\n",
     "Second, although this is still within the amount of RAM for almost all modern computers, this was a good opportunity to leverage SQL to do the data aggregation. SQL has good functionality for aggregating and transforming your data in order to get it into a form suitable for the analyses that you actually want to run- so in my case, I used a local PostgreSQL database to aggregate all of the individual bike rentals into overall monthly values. I used an SQL script to load the data in my database and aggregate them in batches (usually by a couple months at a time). For studies or applications with larger datasets that exceed the amount of RAM, processing the data in batches is one of the necessary work-arounds that must be considered. An example of one of the transactions is similar to the following snippet of SQL code:\n",
@@ -78,7 +77,7 @@
     "```\n",
     "\n",
     "<br>\n",
-    "After inserting all of the daily bike rental data into a local PostgreSQL database, aggregating the data to get the monthly ridership was a straight forward query:\n",
+    "I did not need all of the data available from Capital Bikeshare's datasets, so I eliminated unnecessary columns through the use of a temporary table. The entire set of data in each CSV file was imported into a temporary table, in which afterward I only copied over the relevant columns into a permanent table (called _rides_). Then the temporary table was dropped and this process was repeated until all relevant data was imported into my PostgreSQL database. After importing all of the data, aggregating the data to get the monthly ridership was a straight forward query:\n",
     "\n",
     "\n",
     "``` PostgreSQL\n",
@@ -88,7 +87,7 @@
     "```\n",
     "\n",
     "<br>\n",
-    "With the monthly ridership numbers, the total size of the dataset is something easily manageable within Python, so we can now move over to Python to do more indepth exploration and analysis of the data. For reference, the raw data from Capital Bikeshare was a couple gigabytes, but this monthly aggregated dataset was no more than 2.3kb. I opted to save the aggregated data into a CSV file and load the CSV file in Python just to keep things simple and not have to bring in additional libraries for connecting Python to the PostgreSQL database.\n",
+    "With the monthly ridership numbers, the total size of the dataset is something easily manageable within Python, so we can now move over to Python to do more indepth exploration and analysis of the data. For reference, the raw data from Capital Bikeshare was over 3gb, but the monthly aggregated dataset was no more than 2.3kb. I opted to save the aggregated data into a CSV file and load the CSV file in Python just to keep things simple and not have to bring in additional libraries for connecting Python to the PostgreSQL database.\n",
     "\n",
     "For this project, I used _pandas_ for additional data manipulation and _statsmodels_ for time series modeling functionality. _pandas_ has become somewhat of a standard tool for data science and analysis tasks done with Python, and it has a useful _datetime_ data type for representing time series data that integrates well with statistical modeling libraries such as _statsmodels_. _matplotlib_ is needed for additional visualization and plotting purposes."
    ]
