Now importing the SARIMAX function from statsmodels.tsa.api

--- a/bikeshare_ts_proj.ipynb
+++ b/bikeshare_ts_proj.ipynb
@@ -101,14 +101,14 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from statsmodels.tsa.api import ExponentialSmoothing"
+    "from statsmodels.tsa.api import ExponentialSmoothing, SARIMAX"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The models imported from the _statsmodels_ library (_ExponentialSmoothing_ and _ARIMA_) were chosen specifically for their ability to handle the types of pattern and behavior found in the bike rental data- this will be further discussed in the following sections.\n",
+    "The models imported from the _statsmodels_ library (_ExponentialSmoothing_ and _SARIMAX_) include Holt-Winter's method and the Seasonal ARIMA model. They were chosen specifically for their ability to handle the types of pattern and behavior found in the bike rental data- this will be further discussed in the following sections.\n",
     "\n",
     "First, we'll need to read our data into a _pandas_ dataframe and make sure that the dataframe's index contains  the appropriate datetime values for each observation. Our aggregated data contains an observation for every month from 2013 to 2019, so we have 84 total values/rows in our data set. I always find it very useful to run the _head()_ method on my dataframes before diving into any exploratory data analysis or modeling just so I get a quick idea of the general structure of the data I am working with."
    ]
