Added content discussing the H-W model parameter choices and the resulting model fit

--- a/bikeshare_ts_proj.ipynb
+++ b/bikeshare_ts_proj.ipynb
@@ -200,7 +200,9 @@
     "\n",
     "### Exponential Smoothing (Holt-Winter's Method)\n",
     "\n",
-    "We'll first try Holt-Winter's method for modeling out data. Exponential Smoothing methods essentially use weighted averages of the observed data in order to fit a model that can accurate model the patterns found in the data, where the weights exponentially decrease for observations that are further in the past. "
+    "We'll first try Holt-Winter's method for modeling out data. Exponential Smoothing methods essentially use weighted averages of the observed data in order to fit a model that can accurate model the patterns found in the data, where the weights exponentially decrease for observations that are further in the past. Additional component (essentially equations) are added to the model to capture trend and seasonality within the data.\n",
+    "\n",
+    "We use Holt-Winter's method with both additive trend and seasonality along with dampening to model the data. We then set _season_periods_ to be 12 in order to capture the monthly seasonality that occurs every year. We fit the model and plot the model's fitted values over the true data in the following:"
    ]
   },
   {
@@ -221,22 +223,22 @@
     }
    ],
    "source": [
-    "fit_hw = ExponentialSmoothing(bike, seasonal_periods = 12, trend = 'add', seasonal = 'add', damped = True).fit()\n",
+    "fit_hw = ExponentialSmoothing(bike, seasonal_periods=12, trend='add', seasonal='add', damped=True).fit()\n",
     "\n",
-    "bike_plot = bike.plot(figsize = (10,4), title = \"Holt-Winters' Method Bike Share Fit\")\n",
+    "bike_plot = bike.plot(figsize=(10,4), title=\"Holt-Winters' Method Bike Share Fit\")\n",
     "bike_plot.set_ylabel(\"Number of Bike rentals\")\n",
     "bike_plot.set_xlabel(\"Year\")\n",
     "\n",
-    "fit_hw.fittedvalues.plot(ax = bike_plot, style = '--', color = 'DarkRed')\n",
+    "fit_hw.fittedvalues.plot(ax=bike_plot, style='--', color='DarkRed')\n",
     "bike_plot.legend(['Bike Rentals', 'H-W Model Fit']);"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Our model does seem to capture the seasonality and overall increasing trend well- even capturing the slight tapering off and decrease within year 2019. "
+   ]
   },
   {
    "cell_type": "code",
