--- a/bikeshare_ts_proj.ipynb
+++ b/bikeshare_ts_proj.ipynb
@@ -260,7 +260,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "Our model does seem to capture the seasonality and overall increasing trend well- even capturing the slight tapering off and decrease within year 2019. As a good measure of how well the model fits the data, we take a look at the Mean Average Percentage Error (MAPE) of the model, which provides how \"off\" our model's fitted values are from the true data in percentage. Given below, our model's fitted values are off by an average of 8.6% of the true observations, which is pretty accurate. This gives us confidence that our model fits the data well and is capturing information that will generate useful forecasts."
+    "Our model does seem to capture the seasonality and overall increasing trend well- even capturing the slight tapering off and decrease within year 2019. As a good measure of how well the model fits the data, we take a look at the Mean Average Percentage Error (MAPE) of the model, which provides how \"off\" our model's fitted values are from the true data in percentage. Given above, our model's fitted values are off by an average of 8.6% of the true observations, which is pretty accurate. This gives us confidence that our model fits the data well and is capturing information that will generate useful forecasts."
    ]
   },
   {
