Added introductory paragraph on SARIMA

--- a/bikeshare_ts_proj.ipynb
+++ b/bikeshare_ts_proj.ipynb
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We import two different api's from _statsmodels_: one for functionality to generate plots that we'll need to diagnose some of our models and the other for the actual models themselves. The models that we imported (_ExponentialSmoothing_ and _SARIMAX_) include Holt-Winter's method and the Seasonal ARIMA model. They were chosen specifically for their ability to handle the types of pattern and behavior found in the bike rental data- this will be further discussed in the following sections.\n",
+    "We import two different api's from _statsmodels_: one for functionality to generate plots that we'll need to diagnose some of our models and the other for the actual models themselves. The models that we imported (_ExponentialSmoothing_ and _SARIMAX_) include Holt-Winters' method and the Seasonal ARIMA model. They were chosen specifically for their ability to handle the types of pattern and behavior found in the bike rental data- this will be further discussed in the following sections.\n",
     "\n",
     "First, we'll need to read our data into a _pandas_ dataframe and make sure that the dataframe's index contains  the appropriate datetime values for each observation. Our aggregated data contains an observation for every month from 2013 to 2019, so we have 84 total values/rows in our data set. I always find it very useful to run the _head()_ method on my dataframes before diving into any exploratory data analysis or modeling just so I get a quick idea of the general structure of the data I am working with."
    ]
@@ -296,7 +296,9 @@
    "source": [
     "<br>\n",
     "\n",
-    "Before proceeding with using our model for forecasting purposes, we run diagnostic measures to ensure that our model fit is strong as well as check to see if there is any additional information left in the residuals/errors that we can further extract to improve the model. For diagnosing our model and checking model assumptions, we utilize a quantile-quantile (QQ) plot and a time plot of the residuals. On the left, we have the QQ plot with a normal distribution plotted on the diagonal. The observations follow the diagonal closely, albeit with some less well-fit observations towards the tails, so we conclude that the residuals suitably satisfy the normality assumption. On the right, we have a time plot of the residuals. There are no obvious visual patterns or behavior in this plot, so we conclude that the residuals are independent and that most of the information in our data has been extracted for model fitting. With these two things checked, we proceed with using our model for a forecast. \n"
+    "Before proceeding with using our model for forecasting purposes, we ran diagnostic measures to ensure that our model fit is strong as well as check to see if there is any additional information left in the residuals/errors that we can further extract to improve the model. \n",
+    "\n",
+    "For diagnosing our model and checking model assumptions, we utilized a quantile-quantile (QQ) plot and a time plot of the residuals. On the left, we have the QQ plot with a normal distribution plotted on the diagonal. The observations follow the diagonal closely, albeit with some fluctuations from strict normal distribution towards the tails, so we can conclude that it is reasonable to assume the residuals are of normal distribution. On the right, we have a time plot of the residuals. There are no obvious visual patterns or behavior in this plot, so we conclude that the residuals are not correlated and that most of the information in our data has been extracted for model fitting. With these two things checked, we proceed with using our model for a forecast. \n"
    ]
   },
   {
@@ -331,7 +333,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "We see that the Holt-Winters' method predicts the 2020 year to have monthly average riderships that reflect pretty much the same seasonal pattern that we've seen in prior years. Note that the forecasted months reflect this lowered ridership count, which follows the downward trend that occured from 2018 to the end of 2019.\n",
+    "We see that the Holt-Winters' method predicts the 2020 year to have monthly average riderships that reflect pretty much the same seasonal pattern that we've seen in prior years. Note that the forecasted months reflect this lowered ridership count, which follows the downward trend that occured from 2018 to the end of 2019. Note that there forecasts come with no associated prediction intervals when using the Holt-Winters' method since it technically is not a statistical model, so our forecasted values are only point forecasts. _statsmodels_ does have an equivalent statespace model to the Holt-Winters' method that allows for accompanying prediction intervals for the forecasts, so if you are interested, you can check them out here: [link](https://www.statsmodels.org/stable/statespace.html#linear-exponential-smoothing-models).\n",
     "\n",
     "In particular, the predicted monthly bike rental numbers for 2020 are given in the following output. Note that the numbers returned are decimal values representing the forecasted mean number of rentals at each month (otherwise it wouldn't make sense to predict that we'll have a fraction of a rental)."
    ]
@@ -358,7 +360,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Seasonal ARIMA "
+    "### Seasonal ARIMA \n",
+    "\n",
+    "Our second model is the Seasonal ARIMA model (sometimes abbreviated as SARIMA), which is one of the most widely used time series modeling methods along with Holt-Winters' method. ARIMA models mainly use information from the autocorrelation in the time series data for modeling and forecasting purposes- the idea being that if future values of a variable are be strongly correlated with its past values, then knowing the past values should allow you to make good predictions.  "
    ]
   },
   {
