Added in paragraphs about model selection for SARIMA

--- a/bikeshare_ts_proj.ipynb
+++ b/bikeshare_ts_proj.ipynb
@@ -457,33 +457,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br>\n",
+    "\n",
+    "In general, we use spikes in the ACF plot to identify potential values to set for the order of the moving average (MA) component of our Seasonal ARIMA model and spikes in the PACF plot to identify potential values to set for the autoregressive (AR) component. We'll first notice that in the ACF plot, there are a number of spikes outside of the shaded region for low valued lags. This suggests that we might want to consider an ARIMA model with a low-ordered non-seasonal MA component (represented by _q_). For the PACF plot, we see growing spikes at multiples of the seasonal period (12, 24, 36), so I decided to set the seasonal AR component (represented by _P_) to 1. Recall that there were no spikes at lags of multiples of the seasonal period in the ACF plot, so I decided to set the seasonal MA component (represented by _Q_) to 0.\n",
+    "\n",
+    "The order of the season and non-seasonal MA and AR components generally do not go beyond 2, so we can considering testing out a number of models to see which one performs best. What we can do is perform a grid search over potential values for _p_ and _q_ (since I've manually set _P_ and _Q_, we only need to search for these other two parameters) and compare AICc (Akaike Information Criterion with a correction) values. I iterated over _(0, 1, 2)_ for both _p_ and _q_ and recorded the AICc values of each respective model in a 3x3 dataframe as follows:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "             0            1\n0  1722.721495  1722.403702\n1  1722.460652  1716.695980\n2  1724.634698  1724.740077",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1722.721495</td>\n      <td>1722.403702</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1722.460652</td>\n      <td>1716.695980</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1724.634698</td>\n      <td>1724.740077</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "             0            1            2\n0  1722.721495  1722.403702  1724.214725\n1  1722.460652  1716.695980  1717.196539\n2  1724.634698  1724.740077  1718.099226",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1722.721495</td>\n      <td>1722.403702</td>\n      <td>1724.214725</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1722.460652</td>\n      <td>1716.695980</td>\n      <td>1717.196539</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1724.634698</td>\n      <td>1724.740077</td>\n      <td>1718.099226</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 20
     }
    ],
    "source": [
     "# Try a number of Seasonal ARIMA models so we can choose the one with lowest AICc\n",
-    "sarima_models = pd.DataFrame(np.zeros((3,2), dtype=float))\n",
+    "sarima_models = pd.DataFrame(np.zeros((3,3), dtype=float))\n",
     "\n",
     "for p in range(3):\n",
-    "    for q in range(2):\n",
+    "    for q in range(3):\n",
     "        fit_sarima = SARIMAX(bike['num_rides'], order = (p,0,q), seasonal_order=(1,1,0,12)).fit()\n",
     "\n",
     "        try:\n",
@@ -495,11 +499,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br>\n",
+    "\n",
+    "Based off AICc values, the we proceeded with using an ARIMA(1,0,1)(1,1,0)12 model for fitting our data and performing forecasts:"
+   ]
   },
   {
    "cell_type": "code",
