Fixed a typo in the AICc paragraph and added a sentence

--- a/bikeshare_ts_proj.ipynb
+++ b/bikeshare_ts_proj.ipynb
@@ -504,7 +504,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "Based off AICc values, the we proceeded with using an ARIMA(1,0,1)(1,1,0)12 model for fitting our data and performing forecasts:"
+    "Based off AICc values, I proceeded with using an ARIMA(1,0,1)(1,1,0)12 model for fitting our data and performing forecasts (as it had the lowest AICc value). Note that to be more thorough, I could have ran a grid search over different values of _P_ and _Q_ as well, but this model should be powerful enough to capture the general patterns found in the bike rental data:"
    ]
   },
   {
