--- a/bikeshare_ts_proj.ipynb
+++ b/bikeshare_ts_proj.ipynb
@@ -560,7 +560,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "As the data requires seasonal differencing, it makes sense to only look at how well the model fits past the first 12 months (hence the missing model fit from year 2013). The model fit is generally good, but visually we can see that the Seasonal ARIMA model adheres pretty strongly to variations that occured in each previous seasonal period- each year within the model fit strongly resembles the previous year's monthly bike rental data, down to the monthly ups and downs. "
+    "As the data requires seasonal differencing, it makes sense to only look at how well the model fits past the first 12 months (hence the missing model fit from year 2013). The model fit is generally good, but visually we can see that the Seasonal ARIMA model adheres much stronger than our previous model using Holt-Winters' method to variations that occured in each previous seasonal period- each year within the model fit strongly resembles the previous year's monthly bike rental data, down to the monthly ups and downs. "
    ]
   },
   {
