Added paragraph for discussing model diagnostic procedures for SARIMA model

--- a/bikeshare_ts_proj.ipynb
+++ b/bikeshare_ts_proj.ipynb
@@ -560,7 +560,9 @@
    "source": [
     "<br>\n",
     "\n",
-    "As the data requires seasonal differencing, it makes sense to only look at how well the model fits past the first 12 months (hence the missing model fit from year 2013). The model fit is generally good, but visually we can see that the Seasonal ARIMA model adheres much stronger than our previous model using Holt-Winters' method to variations that occured in each previous seasonal period- each year within the model fit strongly resembles the previous year's monthly bike rental data, down to the monthly ups and downs. "
+    "As the data requires seasonal differencing, it makes sense to only look at how well the model fits past the first 12 months (hence the missing model fit from year 2013). The model fit is generally good, but visually we can see that the Seasonal ARIMA model adheres much stronger than our previous model using Holt-Winters' method to variations that occured in each previous seasonal period- each year within the model fit strongly resembles the previous year's monthly bike rental data, down to the monthly ups and downs. \n",
+    "\n",
+    "A look at the QQ plot shows that the normality assumption for the residuals' distribution is reasonable- although there is a noticeable outlier towards the bottom right of the plot. The residual plot shows a similar story in that there is no visibly detectable pattern, so we conclude it is reasonable to assume that the residuals are not autocorrelated, nor is there \"leftover\" information in the errors that may improve the model. With these two things checked, we can proceed with using the model for forecasting purposes:"
    ]
   },
   {
