Created bottom section with links to the rest of the pages

--- a/1-Data_Aggregation_and_EDA.ipynb
+++ b/1-Data_Aggregation_and_EDA.ipynb
@@ -162,7 +162,9 @@
     "\n",
     "From the plot of the time series data alone, we see strong seasonal behavior and a very mild upward trend that tapers off at the end. This is further supported by the ACF plot with the decreasing sinusoidal behavior of the ACF values. \n",
     "\n",
-    "From the data, we see a general seasonal behavior of bike rental numbers increasing in the middle of the year and decreasing towards the end of the year. This behavior does seem intuitive as the summer months in Washington DC have much more favorable weather conditions for outdoor activities than the winter months. Additionally, summer time in the United States is coincides with increased tourism as schools and universities are on summer breaks. These are potential reasons that contribute to the seasonal behavior that we see. With regards to trend, we do see a slight upward trend over the years, with a tapering off at the end. This possibly points towards a gradual increase in the adoption of bike sharing for commuting or leisure purposes."
+    "From the data, we see a general seasonal behavior of bike rental numbers increasing in the middle of the year and decreasing towards the end of the year. This behavior does seem intuitive as the summer months in Washington DC have much more favorable weather conditions for outdoor activities than the winter months. Additionally, summer time in the United States is coincides with increased tourism as schools and universities are on summer breaks. These are potential reasons that contribute to the seasonal behavior that we see. With regards to trend, we do see a slight upward trend over the years, with a tapering off at the end. This possibly points towards a gradual increase in the adoption of bike sharing for commuting or leisure purposes.\n",
+    "\n",
+    "With trend and seasonality identified in our data, we can get a good idea of which time series models we should use to fit the data. In the next section, we'll start with the first model, the Holt-Winters' Method, which is a linear exponential smoothing model."
    ]
   },
   {
@@ -171,7 +173,13 @@
    "source": [
     "<br>\n",
     "\n",
-    "[]()"
+    "[Next](https://github.com/Christopher-Liu/bikeshare-ts-analysis/blob/master/1-Data_Aggregation_and_EDA.ipynb)\n",
+    "\n",
+    "1. [__Data Aggregation and EDA__](https://github.com/Christopher-Liu/bikeshare-ts-analysis/blob/master/1-Data_Aggregation_and_EDA.ipynb)\n",
+    "\n",
+    "2. [Modeling: Holt-Winters' Method](https://github.com/Christopher-Liu/bikeshare-ts-analysis/blob/master/2-Modeling_Holt-Winters_Method.ipynb)\n",
+    "\n",
+    "3. [Modeling: Seasonal ARIMA](https://github.com/Christopher-Liu/bikeshare-ts-analysis/blob/master/3-Modeling_Seasonal_ARIMA.ipynb)\n"
    ]
   }
  ],
