Added subsection headers to second page

--- a/2-Modeling_Holt-Winters_Method.ipynb
+++ b/2-Modeling_Holt-Winters_Method.ipynb
@@ -91,7 +91,13 @@
     "\n",
     "Our model does seem to capture the seasonality and overall increasing trend well- even capturing the slight tapering off and decrease within year 2019. \n",
     "\n",
-    "As a good measure of how well the model fits the data, we take a look at the Mean Average Percentage Error (MAPE) of the model, which provides how \"off\" our model's fitted values are from the true data in percentage. Given above, our model's fitted values are off by an average of 8.6% of the true observations, which is pretty accurate. We could use the MAPE for model selection if we had a number of models to compare each other against in order to select the optimal model, but since we only have one model, the MAPE value is useful for seeing how well our model fits the data. The low MAPE value gives us confidence that our model fits the data well and is capturing information that will generate useful forecasts."
+    "As a good measure of how well the model fits the data, we take a look at the Mean Average Percentage Error (MAPE) of the model, which provides how \"off\" our model's fitted values are from the true data in percentage. Given above, our model's fitted values are off by an average of 8.6% of the true observations, which is pretty accurate. We could use the MAPE for model selection if we had a number of models to compare each other against in order to select the optimal model, but since we only have one model, the MAPE value is useful for seeing how well our model fits the data. The low MAPE value gives us confidence that our model fits the data well and is capturing information that will generate useful forecasts.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "## Model Diagnostics\n",
+    "\n",
+    "Before proceeding with using our model for forecasting purposes, we ran diagnostic measures to ensure that our model fit is strong as well as check to see if there is any additional information left in the residuals/errors that we can further extract to improve the model. "
    ]
   },
   {
@@ -125,9 +131,11 @@
    "source": [
     "<br>\n",
     "\n",
-    "Before proceeding with using our model for forecasting purposes, we ran diagnostic measures to ensure that our model fit is strong as well as check to see if there is any additional information left in the residuals/errors that we can further extract to improve the model. \n",
-    "\n",
     "For diagnosing our model and checking model assumptions, we utilized a quantile-quantile (QQ) plot and a time plot of the residuals. On the left, we have the QQ plot with a normal distribution plotted on the diagonal. The observations follow the diagonal closely, albeit with some fluctuations from strict normal distribution towards the tails, so we can conclude that it is reasonable to assume the residuals are of normal distribution. On the right, we have a time plot of the residuals. There are no obvious visual patterns or behavior in this plot, so we conclude that the residuals are not correlated and that most of the information in our data has been extracted for model fitting.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "## Model Inferences\n",
     "\n",
     "With these two things checked, we conclude that our model is well-fitted to the data and we can proceed to take a look at the fitted model itself to gain some insight into the data we have. For this purpose, we can call on the fitted model's _summary_ method:"
    ]
@@ -155,6 +163,10 @@
     "<br>\n",
     "\n",
     "Our exponential smoothing model allows for some inference into the trend and seasonality of our bike rental data through the estimated values of the level, slope, and seasonal smoothing parameters. For example, note that the _smoothing seasonal_ (gamma) coefficient was estimated to be _0_. This implies that there is no variation in the seasonal effect on bike rentals from year to year- the general pattern of a rise and fall in ridership within each calendar year stays consistent throughout each of the years. This is could be due to users of the bike sharing service who rely on bike sharing as a reliable method for commuting to work throughout the Washington DC metro area- it would make sense that traffic from these particular users ebb and flow with consistency throughout the years, as work schedules are reasonably robust.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "## Forecasting\n",
     "\n",
     "Beyond just insight into the data, however, we are also interested in predicting ridership numbers over the next few months or years. We can use the fitted model's _forecast_ method in order to do some forecasting to predict the number of bike rentals that we are likely to see in the following year: \n"
    ]
